Refactor optional steps
Co-authored-by: Torben Meyer <torben.meyer@bakdata.com>